# test_openvino_api

./: CMakeLists.txt
src/: main.cpp  main.cpp.autosave
